--- a/Plant/Views/Products/Index.cshtml
+++ b/Plant/Views/Products/Index.cshtml
@@ -152,12 +152,12 @@
                                             <div class="price_box">
                                                 @if (item.Voucher == null || item.Voucher <= 0)
                                                 {
-                                                    <span class="current_price">@item.Price <u>đ</u></span>
+                                                    <span class="current_price">@item.Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
                                                 }
                                                 @if (item.Voucher > 0)
                                                 {
-                                                    <span class="current_price">@item.Price <u>đ</u></span>
-                                                    <span class="old_price">@item.OriginalPrice <u>đ</u></span>
+                                                    <span class="current_price">@item.Price.ToString("C", new System.Globalization.CultureInfo("vi-VN")) </span>
+                                                    <span class="old_price">@item.OriginalPrice.ToString("C", new System.Globalization.CultureInfo("vi-VN")) </span>
                                                 }
                                             </div>
                                         </div>
@@ -170,12 +170,12 @@
                                         <div class="price_box">
                                             @if (item.Voucher == null || item.Voucher <= 0)
                                             {
-                                                    <span class="current_price">@item.Price.Value.ToString("#.###.###.###") <u>đ</u></span>
+                                                <span class="current_price">@item.Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
                                             }
                                             @if (item.Voucher > 0)
                                             {
-                                                <span class="current_price">@item.Price.Value.ToString("#.###.###.###") <u>đ</u></span>
-                                                <span class="old_price">@item.OriginalPrice.Value.ToString("#.###.###.###") <u>đ</u></span>
+                                                <span class="current_price">@item.Price.ToString("C", new System.Globalization.CultureInfo("vi-VN")) </span>
+                                                <span class="old_price">@item.OriginalPrice.ToString("C", new System.Globalization.CultureInfo("vi-VN")) </span>
                                             }
                                         </div>
                                         <div class="product_desc">
