--- a/Plant/Views/Contacts/Index.cshtml
+++ b/Plant/Views/Contacts/Index.cshtml
@@ -5,7 +5,7 @@
 }
 @inject IViewLocalizer Localizer
 <!--breadcrumbs area start-->
-    <div class="breadcrumbs_area" style=" background-image: url('../../LayoutAssets/img/slider/https---www.thespruce.com-best-houseplants-for-sun-4147670-2-8ec2c6cc6c784f80aa1013beadb35a35.jpg'); ">
+    <div class="breadcrumbs_area" style=" background-image: url('../../LayoutAssets/img/slider/uploads_1595672124171-_INTERIOR_PLANTS_PACK.jpg'); ">
 
         <div class="container">
             <div class="row">
