--- a/Plant/Views/Shared/_Layout.cshtml
+++ b/Plant/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <!-- CSS
     ========================= -->
     <!--bootstrap min css-->
-    <link rel="stylesheet" href="~/LayoutAssets/css/bootstrap.min.css">
+    <link href="~/LayoutAssets/css/bootstrap.min.css" rel="stylesheet" />
     <!--owl carousel min css-->
     <link rel="stylesheet" href="~/LayoutAssets/css/owl.carousel.min.css">
     <!--slick min css-->
