--- a/Plant/Views/Shared/_footerLayout.cshtml
+++ b/Plant/Views/Shared/_footerLayout.cshtml
@@ -16,11 +16,11 @@
                         <h3>Information</h3>
                         <div class="footer_menu">
                             <ul>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="checkout.html">Checkout</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="faq.html">Frequently Questions</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
+                                <li><a >About Us</a></li>
+                                <li><a >Checkout</a></li>
+                                <li><a >Contact</a></li>
+                                <li><a >Frequently Questions</a></li>
+                                <li><a>Wishlist</a></li>
                             </ul>
                         </div>
                     </div>
@@ -30,12 +30,12 @@
                         <h3>My Account</h3>
                         <div class="footer_menu">
                             <ul>
-                                <li><a href="my-account.html">My Account</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="cart.html">Shopping cart</a></li>
-                                <li><a href="checkout.html">Checkout</a></li>
-                                <li><a href="shop.html">Shop</a></li>
-                                <li><a href="#">Order History</a></li>
+                                <li><a>My Account</a></li>
+                                <li><a>Contact</a></li>
+                                <li><a>Shopping cart</a></li>
+                                <li><a>Checkout</a></li>
+                                <li><a>Shop</a></li>
+                                <li><a >Order History</a></li>
                             </ul>
                         </div>
                     </div>
@@ -45,12 +45,12 @@
                         <h3>Customer Service</h3>
                         <div class="footer_menu">
                             <ul>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="#">Terms of use</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="contact.html">Site Map</a></li>
-                                <li><a href="my-account.html">My Account</a></li>
-                                <li><a href="#">Returns</a></li>
+                                <li><a>Contact Us</a></li>
+                                <li><a >Terms of use</a></li>
+                                <li><a >Privacy Policy</a></li>
+                                <li><a>Site Map</a></li>
+                                <li><a >My Account</a></li>
+                                <li><a >Returns</a></li>
                             </ul>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <div class="footer_payment">
-                        <a href="#"><img src="~/LayoutAssets/img/icon/payment.png" alt=""></a>
+                        <a ><img src="~/LayoutAssets/img/icon/payment.png" alt=""></a>
                     </div>
                 </div>
             </div>
