--- a/Plant/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Plant/Areas/Identity/Pages/Account/Login.cshtml
@@ -11,7 +11,7 @@
         <div class="col-lg-4 col-md-6">
             <section>
                 <form id="account" method="post">
-                    <h4>Use a local account to log in.</h4>
+                    <h3 style="display: flex; justify-content: center; margin-bottom: 10px; font-weight: 700;">LOGIN</h3>
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
@@ -19,34 +19,28 @@
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <input asp-for="Input.Password" class="form-control" placeholder="Password..."/>
+                        <input asp-for="Input.Password" class="form-control" placeholder="Password..." />
                         <span asp-validation-for="Input.Password" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <div class="checkbox">
                             <label asp-for="Input.RememberMe">
-                                <input asp-for="Input.RememberMe" />
+                                <input asp-for="Input.RememberMe" type="checkbox" class="account_login_input_checkbox" />
                                 @Html.DisplayNameFor(m => m.Input.RememberMe)
                             </label>
+                            <span class="account_forgot_password">
+                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                            </span>
                         </div>
+
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Log in</button>
+                        <button type="submit" class="account_login_submit">Log in</button>
                     </div>
-                    <div class="form-group">
-                        <p>
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                        </p>
-                        <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                        </p>
-                        <p>
-                            <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                        </p>
-                    </div>
+
                 </form>
 
-                <h4>Use another service to log in.</h4>
+                <h4 style="display:flex;justify-content:center;margin-top:20px;">- Or Sign In With -</h4>
                 <hr />
                 @{
                     if ((Model.ExternalLogins?.Count ?? 0) == 0)
@@ -65,13 +59,18 @@
                                 <p>
                                     @foreach (var provider in Model.ExternalLogins)
                                     {
-                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                        <button type="submit" class="account_login_different btn btn-light" name="provider" value="@provider.Name">@provider.DisplayName</button>
                                     }
                                 </p>
                             </div>
                         </form>
                     }
                 }
+                <div class="form-group">
+                    <h4 style="display:flex;justify-content:center;margin-top:20px;">
+                        Don't have a account ? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">  Register</a>
+                    </h4>
+                </div>
             </section>
         </div>
         <div class="col-lg-4 col-md-3"></div>
