--- a/Plant/Views/Orders/Cart.cshtml
+++ b/Plant/Views/Orders/Cart.cshtml
@@ -24,7 +24,7 @@
                 <div class="col-12">
                     <div class="table_desc">
                         <div class="cart_page table-responsive">
-                            <table>
+                            <table style="width:100%;">
                                 <thead style="background:white; color:black;font-weight:600;">
                                     <tr>
                                         <th></th>
@@ -95,7 +95,7 @@
                     var itemCartHtml = document.createElement('tr');
                     itemCartHtml.innerHTML = `
                                                                         <td>
-                                                                            <input type="checkbox"/>
+                                                                            <input class="table_desc_checkbox" type="checkbox"/>
                                                                         </td>
                                                                         <td class="product_thumb">
                                                                             <a>
@@ -138,7 +138,7 @@
                     itemCartHtmlPhone.innerHTML = `
                                                             <div class="row">
                                                                 <div class="checkbox_cart col-1">
-                                                                    <input type="checkbox" checked="${item.choose}" />
+                                                                    <input class="table_desc_checkbox" type="checkbox" checked="${item.choose}" />
                                                                 </div>
                                                                 <div class="image_cart col-3">
                                                                     <img src="/image/product/${product.image}" alt = "" >
