--- a/Plant/Views/Products/GetListProducts.cshtml
+++ b/Plant/Views/Products/GetListProducts.cshtml
@@ -12,7 +12,7 @@
 
 
 <!--breadcrumbs area start-->
-<div class="breadcrumbs_area" style=" background-image: url('../../LayoutAssets/img/slider/uploads_1595672124171-_INTERIOR_PLANTS_PACK.jpg') ">
+<div class="breadcrumbs_area" style=" background-image: url('../../LayoutAssets/img/slider/capturar-co2-atmosfera.jpg') ">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -32,7 +32,7 @@
 <div class="shop_area shop_reverse mt-100 mb-100">
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-3 col-sm-12">
+            <div class="col-lg-3 col-md-3 col-12">
                 <div class="blog_sidebar_widget">
                     <div class="widget_list widget_search">
                         <div class="widget_title">
@@ -140,7 +140,7 @@
                 <div class="blog_sidebar_img"><img src="~/LayoutAssets/img/blog/il_570xN.3215982608_zsmn.jpg" style="height:auto;width:100%;margin-top:20px;border-radius:15px;" /></div>
 
             </div>
-            <div class="col-lg-9 col-md-9 col-sm-12">
+            <div class="col-lg-9 col-md-9 col-12">
                 <!--shop wrapper start-->
                 <!--shop toolbar start-->
                 <div class="shop_toolbar_wrapper">
@@ -173,7 +173,7 @@
                 <div class="row shop_wrapper">
                     @foreach (var item in Model)
                     {
-                        <div class="col-md-4 col-lg-3 col-sm-6 ">
+                        <div class="col-md-4 col-lg-3 col-6 ">
                             <article class="single_product">
                                 <figure>
                                     <div class="product_thumb">
