--- a/Plant/Views/Orders/Cart.cshtml
+++ b/Plant/Views/Orders/Cart.cshtml
@@ -41,7 +41,7 @@
                             </table>
                         </div>
                         <div class="cart_submit">
-                            <a type="button" asp-area="" asp-controller="Orders" asp-action="CartDone">@Localizer["purchase"]</a>
+                            <a type="button" asp-area="" asp-controller="Orders" asp-action="Order">@Localizer["purchase"]</a>
                         </div>
                     </div>
                 </div>
