--- a/Plant/Areas/Admin/Views/AdminOrders/Details.cshtml
+++ b/Plant/Areas/Admin/Views/AdminOrders/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Plant.Models.Order
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Order</h4>
     <hr />
@@ -59,18 +58,16 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Customer.Email)
-        </dd class>
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Payment)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Payment.PaymentName)
-        </dd class>
+        </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="OrderId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.OrderId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
