--- a/Plant/Areas/Admin/Views/AdminOrders/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminOrders/Index.cshtml
@@ -1,96 +1,104 @@
-﻿@model IEnumerable<Plant.Models.Order>
+﻿@using PagedList.Core.Mvc
+@model PagedList.Core.IPagedList<Plant.ModelDto.OrderDto>
 
 @{
-    ViewData["Title"] = "Index";
+    int CurrentPage = ViewBag.CurrentPage;
+    ViewData["Title"] = "Index" + CurrentPage;
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.LangId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CustomerId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PaymentId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PaymentStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Money)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShipFee)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderStatus)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Deleted)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Feedback)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LangId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaymentId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaymentStatus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreateDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Money)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ShipFee)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderStatus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Deleted)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Feedback.FeedbackContent)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
-            </td>
-        </tr>
+<!-- Breadcrumb -->
+<nav class="hk-breadcrumb" aria-label="breadcrumb">
+    <ol class="breadcrumb breadcrumb-light bg-transparent">
+        <li class="breadcrumb-item"><a asp-action="Index">Đơn hàng</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Danh sách đơn hàng</li>
+    </ol>
+</nav>
+<!-- /Breadcrumb -->
+<!-- Container -->
+<div class="container-fluid px-lg-4">
+    <!-- Title -->
+    <div class="hk-pg-header mb-10">
+        <div>
+            <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="book"></i></span></span>Danh sách đơn hàng</h4>
+        </div>
+       
+    </div>
+    <!-- /Title -->
+    <section class="hk-sec-wrapper mb-3">
+        
+        <div class="row">
+            <div class="col-sm">
+                <div class="table-wrap">
+                    <div class="table-responsive">
+                        <table class="table table-sm table-hover mb-0">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th class="py-3">#Mã</th>
+                                    <th class="py-3">Tên</th>
+                                    <th class="py-3">Email</th>
+                                    <th class="py-3">Ngày đặt</th>
+                                    <th class="py-3">Tổng tiền</th>
+                                    <th class="py-3">Trạng thái đơn hàng</th>
+                                    <th class="py-3">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>#@item.OrderId</td>
+                                        <td>@item.LastName @item.FirstName </td>
+                                        <td>@item.Email</td>
+                                        <td>
+                                            @item.CreateDate
+                                        </td>
+                                        <td style="color:red;">
+                                            @item.Total.ToString("C", new System.Globalization.CultureInfo("vi-VN"))
+                                        </td>
+                                        <td>
+                                            @if (item.OrderStatus == "Chờ xác nhận")
+                                            {
+                                                <span class="badge badge-warning">@item.OrderStatus</span>
+                                            }
+                                            @if (item.OrderStatus == "Chờ giao hàng")
+                                            {
+                                                <span class="badge badge-primary">@item.OrderStatus</span>
+                                            }
+                                            @if (item.OrderStatus == "Đã giao")
+                                            {
+                                                <span class="badge badge-success">@item.OrderStatus</span>
+                                            }
+                                            @if (item.OrderStatus == "Đã hủy")
+                                            {
+                                                <span class="badge badge-danger">@item.OrderStatus</span>
+                                            }
+                                        </td>
+                                        <td>
+                                            <a asp-action="Edit" asp-route-id="@item.OrderId" class="mx-2" data-toggle="tooltip" data-original-title="Edit"><i class="far fa-sliders-h text-dark"></i></a>
+                                            <a asp-action="Delete" asp-route-id="@item.OrderId"data-toggle="tooltip" data-original-title="Xóa"><i class="far fa-trash-alt text-danger"></i></a>
+                                        </td>
+                                    </tr>
+                                }
+
+
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mt-3 row col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center" aria-label="Page navigation example">
+            <ul class="pagination">
+                <pager class="pager-container" list="@Model" asp-area="Admin" asp-controller="AdminOrders" asp-action="Index" />
+            </ul>
+        </div>
+    </section>
+</div>
+
+
+@section Scripts{
+    <script>
+    </script>
 }
-    </tbody>
-</table>
