--- a/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
+++ b/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
@@ -228,9 +228,12 @@
                         <li class="nav-item">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="form-element.html">Form Elements</a>
+                                    <a class="nav-link" asp-area="Admin" asp-controller="AdminPayments" asp-action="Index">Phương thức thanh toán</a>
                                 </li>
-                              
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Admin" asp-controller="AdminOrders" asp-action="Index"> Danh sách đơn hàng</a>
+                                </li>
+
                             </ul>
                         </li>
                     </ul>
