--- a/Plant/Views/Shared/_Layout.cshtml
+++ b/Plant/Views/Shared/_Layout.cshtml
@@ -298,7 +298,7 @@
     <script src="https://maps.google.com/maps/api/js?sensor=false&amp;libraries=geometry&amp;v=3.22&amp;key=AIzaSyChs2QWiAhnzz0a4OEhzqCXwx_qA9ST_lE"></script>
     <script src="https://www.google.com/jsapi"></script>
     <script src="~/LayoutAssets/js/map.js"></script>
-    @await RenderSectionAsync("Scripts", required: false);
+    @await RenderSectionAsync("Scripts", required: false)
     <script src="~/localStorage/localStorage.js"></script>
     <script>
         function GetProductData(productId, color) {
@@ -342,7 +342,7 @@
                                                                         <a href="#">${product.productName}</a >
                                                                         <p>${priceMiniCartToMoney} x ${item.color}</p>
                                                                     </div>
-                                                            `;
+                                                            `
                     listCartNav.appendChild(itemCartNav);
                 })
                 .catch(function (error) {
