--- a/Plant/Views/Shared/_LoginPartial.cshtml
+++ b/Plant/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     var user = await UserManager.GetUserAsync(User);
     var firstName = user.FirstName;
 
-    <a asp-area="Identity" asp-page="/Account/Manage/Index"><i class="fa-solid fa-user"></i> @firstName</a>
+    <a asp-area="" asp-controller="Users" asp-action="Index"><i class="fa-solid fa-user"></i> @firstName</a>
     <ul class="dropdown_links">
         <li>
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post">
