--- a/Plant/Views/Users/Index.cshtml
+++ b/Plant/Views/Users/Index.cshtml
@@ -16,14 +16,14 @@
                     <!-- Nav tabs -->
                     <div class="dashboard_tab_button">
                         <ul role="tablist" class="nav flex-column dashboard-list">
-                            <li><a href="#dashboard" data-bs-toggle="tab" class="nav-link active">Dashboard</a></li>
-                            <li> <a href="#orders" data-bs-toggle="tab" class="nav-link">Orders</a></li>
+                            <li><a href="#dashboard" data-bs-toggle="tab" class="nav-link active">Thông tin cá nhân</a></li>
+                            <li> <a href="#orders" data-bs-toggle="tab" class="nav-link">Quản lí đơn hang</a></li>
                             <li><a href="#downloads" data-bs-toggle="tab" class="nav-link">Downloads</a></li>
                             <li><a href="#address" data-bs-toggle="tab" class="nav-link">Addresses</a></li>
                             <li>
                                 <a href="#account-details" data-bs-toggle="tab" class="nav-link">Account details</a>
                             </li>
-                            <li><a asp-area="Identity" asp-controller="Account" asp-action="Logout">logout</a></li>
+                            <li><a asp-area="Identity" asp-controller="Account" asp-action="Logout" class="nav-link">logout</a></li>
                         </ul>
                     </div>
                 </div>
